- Fixed header logo and icons alignement issues

--- a/app/assets/stylesheets/kulkakit/style.scss
+++ b/app/assets/stylesheets/kulkakit/style.scss
@@ -1081,11 +1081,11 @@ span:hover {
 }
 
 .content-wrapper .dropdown-login {
-    width: 50px;
+    width: 20px;
     color: rgba(18, 18, 18, 0.7);
     border: none;
     background-color: transparent;
-    font-size: 26px;
+    font-size: 22px;
 }
 
 .content-wrapper .dropdown-button {
