--- a/app/assets/stylesheets/webflow/webflow-style.scss
+++ b/app/assets/stylesheets/webflow/webflow-style.scss
@@ -333,10 +333,12 @@
 
 .webflow-logo-xs-40 {
     @media (max-width: 575.98px) {
-        width: 32px;
-        height: 32px;
-        border: none;
-        margin-right: 5vh;
+        width: 10%;
+        height: 4.5vh;
+        border: 0.5px solid rgba(18, 18, 18, 0.3);
+        position: absolute;
+        left: 45%;
+        bottom: 2px;
 
         img {
             width: 100%;
